# DB6502-Emulator

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  architecture.md  decisions.md  plan.md  todo.md
src/: CMakeLists.txt  audio.c  audio.h  config.h  db6502emu.cpp  db6502emu.h  hbc56emu.h  imgui.ini
src/devices/: acia_device.c  acia_device.h
